# cacheclip

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: build.sh
src/: main.rs
